Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -369,7 +369,7 @@
     }
    ],
    "source": [
-    "cities[7]['City'] = cities.update = \"PyeongChang\"\n",
+    "cities[7]['City'] = cities.update('Peongchang') = \"PyeongChang\"\n",
     "cities[7]['City'] # 'PyeongChang'"
    ]
   },
