Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -353,20 +353,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "can't assign to function call (<ipython-input-1-0a57666d349c>, line 1)",
+     "evalue": "can't assign to function call (<ipython-input-2-1badcaed64f7>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-0a57666d349c>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    cities[7]['City'] = cities.update('Peongchang') = \"PyeongChang\"\u001b[0m\n\u001b[0m                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to function call\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-1badcaed64f7>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    cities[7]['City'] = cities.update('Pyeongchang') = \"PyeongChang\"\u001b[0m\n\u001b[0m                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to function call\n"
      ]
     }
    ],
    "source": [
-    "cities[7]['City'] = cities.update('Peongchang') = \"PyeongChang\"\n",
+    "cities[7]['City'] = cities.update('Pyeongchang') = \"PyeongChang\"\n",
     "cities[7]['City'] # 'PyeongChang'"
    ]
   },
