--- a/index.ipynb
+++ b/index.ipynb
@@ -369,7 +369,7 @@
     }
    ],
    "source": [
-    "cities[7]['City'] =  \"PyeongChang\"\n",
+    "cities[7]['City'] ={''} \"PyeongChang\"\n",
     "cities[7]['City'] # 'PyeongChang'"
    ]
   },
