--- a/index.ipynb
+++ b/index.ipynb
@@ -395,7 +395,7 @@
     }
    ],
    "source": [
-    "pyeongchang_values = list\n",
+    "pyeongchang_values = \n",
     "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 44, 1464]"
    ]
