--- a/index.ipynb
+++ b/index.ipynb
@@ -395,7 +395,7 @@
     }
    ],
    "source": [
-    "pyeongchang_values = cities.value[7]\n",
+    "pyeongchang_values = cities.value('')\n",
     "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 44, 1464]"
    ]
