Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -366,7 +366,7 @@
     }
    ],
    "source": [
-    "cities[7]['City'] ={'Pyeongchang': 'PyeongChang'} \"PyeongChang\"\n",
+    "cities[7]['City'] =  \"PyeongChang\"\n",
     "cities[7]['City'] # 'PyeongChang'"
    ]
   },
