--- a/index.ipynb
+++ b/index.ipynb
@@ -353,21 +353,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-16-b85e67c97930>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-16-b85e67c97930>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    cities[7]['City'] ={'Pyeongchang': 'PyeongChang'} \"PyeongChang\"\u001b[0m\n\u001b[0m                                                                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'PyeongChang'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "cities[7]['City'] =  \"PyeongChang\"\n",
-    "cities[7]['City'] # 'PyeongChang'"
+    "printcities[7]['City'] # 'PyeongChang'"
    ]
   },
   {
