Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -353,23 +353,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'PyeongChang'"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PyeongChang\n"
+     ]
     }
    ],
    "source": [
     "cities[7]['City'] =  \"PyeongChang\"\n",
-    "printcities[7]['City'] # 'PyeongChang'"
+    "print(cities[7]['City']) # 'PyeongChang'"
    ]
   },
   {
