Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -394,7 +394,7 @@
     }
    ],
    "source": [
-    "pyeongchang_values = \"\"\n",
+    "pyeongchang_values = City.v\n",
     "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 44, 1464]"
    ]
