Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -394,7 +394,7 @@
     }
    ],
    "source": [
-    "pyeongchang_values = cities.value(cities[7]['City'])\n",
+    "pyeongchang_values = cities.value('Pyeon')\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 44, 1464]"
    ]
   },
