Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -394,7 +394,8 @@
     }
    ],
    "source": [
-    "pyeongchang_values = cities.value('PyeonChang')\n",
+    "pyeongchang_values = .value[7]\n",
+    "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 44, 1464]"
    ]
   },
