--- a/index.ipynb
+++ b/index.ipynb
@@ -394,7 +394,7 @@
     }
    ],
    "source": [
-    "pyeongchang_values = list(cities.update())\n",
+    "pyeongchang_values = list(cities[7].update())\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 44, 1464]"
    ]
   },
