Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -426,27 +426,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "pyeongchang_keys = None\n",
+    "pyeongchang_keys = list\n",
     "\n",
     "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "NoneType"
+       "type"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
